Added lines in Quality Control slide
Also placed in press p to view notes

--- a/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.html
+++ b/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.html
@@ -40,11 +40,11 @@ Recently announced are R9.4.1 and R9.5.1 which we are yet to run.
 # Quality Control
 
 * Quantification.
-    + Qubit
+    + Qubit&lt;br&gt;&lt;/br&gt;
 * Purity.
-    + Nanodrop
+    + Nanodrop&lt;br&gt;&lt;/br&gt;
 * Distribution.
-    + TapeStation
+    + TapeStation&lt;br&gt;&lt;/br&gt;
 
 ???
 
