Hint now for just one of the slides.

--- a/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.html
+++ b/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.html
@@ -18,6 +18,8 @@ class: center, middle, inverse, title-slide
 ---
 
 
+class: hint-slide
+
 ## Chemistry history 
 .left-column[.center[R7 to R9.4]
 &lt;img src=images/yield_plots_old.png width=100%&gt;
