--- a/nanopore_dunedin/nanopore_dunedin.html
+++ b/nanopore_dunedin/nanopore_dunedin.html
@@ -180,7 +180,7 @@ Benefits, pros cons.
 
 * de-Bruijn graphs
 
-* OLC - Overlap-layout-concensus
+* OLC - Overlap-layout-consensus
 
 
 
@@ -306,7 +306,7 @@ Fast! - complexities:
 1. Build an overlap graph:
   + Locally align prefix of read X to suffix of read Y.
 2. Convert overlap stretches into contigs.
-3. Run a pileup concensus on the reads mapping to each contig.
+3. Run a pileup consensus on the reads mapping to each contig.
 ]
 ]
 .pull-right[
@@ -416,7 +416,7 @@ Long read platforms: .tiny[That I'm familiar with]
 ## Miniasm
 
 Fast and dirty - OLC.
-Little concensus done.
+Little consensus done.
 
 ## Canu
 
