Final push for the linked reads talk

--- a/PeterMac_CSSTRING_2018/PeterMac_CS_string_2018.html
+++ b/PeterMac_CSSTRING_2018/PeterMac_CS_string_2018.html
@@ -4,6 +4,7 @@
     <title>Nanopore and Minimap2 things</title>
     <meta charset="utf-8">
     <meta name="author" content="Alexis Lucattini" />
+    <script src="libs/kePrint-0.0.1/kePrint.js"></script>
     <link rel="stylesheet" href="libs\remark-css-0.0.1\nanopore_dunedin.css" type="text/css" />
   </head>
   <body>
