--- a/linked_reads/linked_reads.html
+++ b/linked_reads/linked_reads.html
@@ -39,14 +39,14 @@ https://10xgenomics.wistia.com/medias/2r0nal3n3j
 # A Micro-Glossary
 
 * Barcode
-  + A unique set of 14 nucleotides.
+  + .small[A unique set of 14 nucleotides.]
 * Molecule:
-  + The ~50Kb input molecule into the 10X system.
+  + .small[The ~50Kb input molecule into the 10X system.]
 * Read:
-  + ~200 bp containing genomic information and a barcode.
+  + .small[~200 bp containing genomic information and a barcode.]
 * GEM:
-  + A single droplet containing identical barcodes
-  + Approximately 10 molecules exist inside per GEM.
+  + .small[A single droplet containing identical barcodes.]
+  + .small[Approximately 10 molecules exist inside per GEM.]
 
 ---
 
@@ -176,9 +176,9 @@ Obtain SNP calling .small[(GATK)], phasing and SV information
 * ~ Run time: 
  + Three days .small[w. 250GB RAM and 16 cores]
 * Output:
- + List of structural variants in .bed format.
- + BAM files with additional haplotype phasing tags.
- + .loupe file.
+ + .small[List of structural variants in .bed format.]
+ + .small[BAM files with additional haplotype phasing tags.]
+ + .small[.loupe file.]
 
 ???
 
