Fixed spelling mistake on bioRxiv

--- a/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.html
+++ b/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.html
@@ -288,7 +288,7 @@ Jared T. Simpson's [nanopolish](https://github.com/jts/nanopolish) uses signal-l
 ]
 
 .pull-left[
-[Bio-Xriv Paper](https://www.biorxiv.org/content/early/2018/10/17/445924)
+[BioRxiv Paper](https://www.biorxiv.org/content/early/2018/10/17/445924)
 ]
 .pull-right[
 [Scott's GitHub Haplotype-Methylome Repo](https://github.com/scottgigante/haplotyped-methylome)
