Dogfish to guppy as GPU basecaller

--- a/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.html
+++ b/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.html
@@ -115,7 +115,7 @@ Kit-9, sample sensitive, great N50!
 
 ## Basecalling methods
 ### GPU &amp; CPU.
-* GPUs much faster. Dogfish current basecaller in PromethION.
+* GPUs much faster. .small[Guppy 1.8.3 is the current basecalling version]
 
 * Different algorithms give slightly different results.
 
@@ -177,7 +177,7 @@ Kit-9, sample sensitive, great N50!
 
 * Package to tidy up and evaluate sequencing runs on PromethION Beta.
 * Can be used on MinION datasets as well
-  + small[make sure not to over-allocate resources on a laptop]
+  + .small[make sure not to over-allocate resources on a laptop]
 
 .pull-left[
 [GitHub](https://www.github.com/alexiswl/betaduck)
