Added code font-size option to css, added in app section and tidied presentation.

--- a/HPC_and_Singularty/HPC_Singularity_Presentation.html
+++ b/HPC_and_Singularty/HPC_Singularity_Presentation.html
@@ -20,21 +20,21 @@ class: center, middle, inverse, title-slide
 
 # Introduction
 .pull-left[
-## What we will cover:
+## Covered:
 .baby-bear[
-Building from pre-built containers
-Installations via a recipe script
-Running your containers on a HPC
-Developing module files for your containers
+* Building from pre-built containers  
+* Installations via a recipe
+* Running containers on your HPC  
+* Developing module files for containers  
 ]]
 .pull-right[
-## What we wont cover:
+## Not covered:
 .baby-bear[
-Using 'make'
-Using 'gcc'
-Using 'apt'
-Using 'docker'
-Using 'sbatch'
+* Using 'make'  
+* Using 'gcc'  
+* Using 'apt'  
+* Using 'docker'  
+* Using 'sbatch'  
 ]
 ]
 
@@ -95,7 +95,7 @@ Using 'sbatch'
  
 ---
 
-# Overview of environment wrapping
+# Environment wrapping
 
 .pull-left[
 .baby-bear[
@@ -134,8 +134,10 @@ Using 'sbatch'
 
 ---
 
+# Examples
+
 .pull-left[
-### DockerHub example
+## DockerHub
 
 ```bash
 $ cat recipe.docker
@@ -147,7 +149,7 @@ exec R ${@}
 ```
 ]
 .pull-right[
-### SingularityHub example
+## SingularityHub
 
 ```bash
 $ cat recipe.singularity
@@ -217,8 +219,8 @@ $ singularity shell r_from_shub_3.5.2.simg
 
 ---
 
-# Specify an installation script
-
+# Write a recipe
+.small-code[
 
 ```bash
 $ cat recipe.singularity
@@ -238,21 +240,27 @@ Rscript --vanilla -e 'install.packages("BiocManager")'
 %runscript
 exec R ${@}
 ```
+]
+
+.footnote[
+If this script fails for you, please see the next slide before panicking
+]
 
 ???
 
-The R container is pretty good, but maybe we could give our users a bit of a head-start. Using the %post section we’ll preinstall a few packages to get them going.
+The R container is pretty good, but maybe we could give our users a bit of a head-start.   
+Using the %post section we’ll preinstall a few packages to get them going.
+If this script fails for you, you've done good.
 
 ---
 
-# The pain of R
+# Adding files
 .baby-bear[
-Oh dear, it appears we don’t have a CRAN mirror.  
-We can add one in using %files section and ensure it’s there for all users.
+No CRAN mirror specified?  
+No worries, we can add [one](rprofile.site) in using the %files section.
 ]
 
-
-.tiny[
+.small-code[
 
 ```bash
 $ cat recipe.singularity
@@ -260,15 +268,14 @@ BootStrap: shub
 From: MPIB/singularity-r:3.5.1
 
 %help
-To get started with this image, try
-singularity run r_from_shub_3.5.1.simg
+...
 
 %files
 r_profile.site /usr/local/lib/R/etc/Rprofile.site
 
 %post
 Rscript --vanilla -e 'install.packages("tidyverse")'
-Rscript --vanilla -e 'install.packages("BiocManager")'
+...
 
 %runscript
 exec R ${@}
@@ -283,8 +290,9 @@ TODO: link to the rprofile file.
 
 # Apps
 
-Our container now runs R interactively.  
-This may not suit the needs of everyone.
+.baby-bear[
+Our container now runs R interactively,  
+however, this may not suit the needs of everyone.
 
 * Apps allow users to specify what commands they wish to run.
 * Apps can also have their own specific:
@@ -293,6 +301,7 @@ This may not suit the needs of everyone.
   + %post
 
 Just specify with the %app prefix and complete with the app name.
+]
 
 ???
 
@@ -302,6 +311,7 @@ But say our user just needs the R platform, not the interactive suite? We could 
 
 # App example
 
+.small-code[
 
 ```bash
 $ cat recipe.singularity
@@ -309,8 +319,7 @@ BootStrap: shub
 From: MPIB/singularity-r:3.5.1
 
 %help
-To get started with this image, try
-singularity run r_from_shub_3.5.1.simg
+...
 
 %apphelp Rscript
 Use container in non-interactive mode
@@ -319,22 +328,21 @@ singularity run r_from_shub.3.5.2.simg --no-init-file my_r_script
 %apprun Rscript
 exec Rscript ${@}
 
+...
 %files
-r_profile.site /usr/local/lib/R/etc/Rprofile.site
-
 %post
-Rscript --vanilla -e 'install.packages("tidyverse")'
-Rscript --vanilla -e 'install.packages("BiocManager")'
-
 %runscript
-exec R ${@}
+...
 
-$ sudo singularity build r_from_shub_3.5.1.simg recipe
 ```
+]
 
 ---
 
-# App example
+# TODO
+
+commentary,
+environment
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
